finishing my coding for personal website

--- a/index.html
+++ b/index.html
@@ -4,9 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal 1 Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&family=Poppins&family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <section class="container first">
+        <div class="half-width first-text">
+            <h3>Hello I'm 
+                <br>
+            <span class="color-highlight">Jack Smith</span></h3>
+            <p>Lorem ipsum dolor sit amet consectetur are nice of  thin Lorem ipsum dolor sit amet consectetur.</p>
+            <a target="_blank" class="button" href="#">HIRE ME</a>
+             </div>
+             <div class="half-width first-image"><img src="images/profile/peter.png" alt=""></div>
+        </section>
+        <section class="container second">
+            <div class="half-width second-image">
+                <img src="images/profile/peter_dream.png" alt="">
+            </div>
+            <div class="half-width second-text">
+                <h3 class="font-size">Biography</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste,Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex repudiandae quaerat nemo maiores temporibus quibusdam! Ratione, ullam nulla. Iure, at.</p>
+                <a target="-block" class="button" href="#">Download CV</a>
+            </div>
+        </section>
+    <section class="container third">
+        <h3>My Latest Work</h3>
+        <div class="latest-work-image">
+            <img src="images/latest-work/work-1.png" alt="" class="latest-image">
+            <img src="images/latest-work/work-2.jpg" alt="" class="latest-image">
+            <img src="images/latest-work/work-3.jpg" alt="" class="latest-image"></div>
+    </section>
+    <section class="container fourth">
+        <h3>What Client Are Say</h3>
+            <h5 >Bruce Moccy
+                <br>
+            <span class="color-silver">Founder & CEO Alies</span></h5>
+            <p id="color-black">"Lorem ipsum dolor sit amet consectetur adipisicing 
+                <br>
+                elit. Saepe odio dolor itaque laborum distinctio rerum."</p>
+
+              <button class="button button-special"><span style="font-size: xx-small;">Leave me a message in the</span> 
+                <br>
+                <a href="#">mushfiqurr15@gmail.com</a>
+            </button>
+        
+    </section>
+    <footer>
+        <p>© Mushfiqur Rahman 2023, a Programming Hero initiative</p>
+    </footer>
 </body>
 </html>
